@@ -211,6 +211,7 @@ const char * Fl_File_Chooser::label() {
 void Fl_File_Chooser::show() {
   window->hotspot(fileList);
 window->show();
+fileName->take_focus();
 }
 
 int Fl_File_Chooser::shown() {
@@ -264,6 +265,6 @@ int Fl_File_Chooser::type() {
 int Fl_File_Chooser::visible() {
   return window->visible();
 }
-FL_EXPORT char *fl_dir_chooser(const char *message,const char *fname);
-FL_EXPORT char *fl_file_chooser(const char *message,const char *pat,const char *fname);
+FL_EXPORT char *fl_dir_chooser(const char *message,const char *fname,int relative=0);
+FL_EXPORT char *fl_file_chooser(const char *message,const char *pat,const char *fname,int relative=0);
 FL_EXPORT void fl_file_chooser_callback(void (*cb)(const char*));
