@@ -150,8 +150,8 @@ rescan();} {}
   Function {show()} {open return_type void
   } {
     code {window->hotspot(fileList);
-window->show();} {selected
-    }
+window->show();
+fileName->take_focus();} {}
   }
   Function {shown()} {return_type int
   } {
@@ -217,10 +217,10 @@ else
   }
 } 
 
-decl {FL_EXPORT char *fl_dir_chooser(const char *message,const char *fname);} {public
+decl {FL_EXPORT char *fl_dir_chooser(const char *message,const char *fname,int relative=0);} {public
 } 
 
-decl {FL_EXPORT char *fl_file_chooser(const char *message,const char *pat,const char *fname);} {public
+decl {FL_EXPORT char *fl_file_chooser(const char *message,const char *pat,const char *fname,int relative=0);} {selected public
 } 
 
 decl {FL_EXPORT void fl_file_chooser_callback(void (*cb)(const char*));} {public
